@@ -1,3 +1,10 @@
+ags (0.7.116)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed possible NULL pointer access in ags_midiin_list_cards()
+	* fixed AgsMidiin to always set nth_buffer during record
+	* fixed in ags_midiin_set_device() to duplicate string and handle OSS4
+
 ags (0.7.115)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
